Sat Mar  5 02:41:00 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (eaccess): workaround for VC++8 runtime.

	* win32/win32.c (ioinfo): VC++8 support.

Fri Mar  4 19:39:55 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser#do_includes): replace
	  also locally defined modules.

	* ext/iconv/iconv.c: rdocified.

	* ext/strscan/strscan.c: moved misplaced rdoc.

Fri Mar  4 16:11:20 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (rb_exec_recursive): matched the declaration to prototype.

	* ext/curses/curses.c: don't need to check HAVE_WCOLOR_SET excluding
	  window_color_set().

	* ext/tk/tcltklib.c: fixed commit mistakes.

Fri Mar  4 12:45:17 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c: replace rb_protect_inspect() and rb_inspecting_p() by
	  rb_exec_recursive() in eval.c.

	* eval.c (rb_exec_recursive): new function.

	* array.c (rb_ary_join): use rb_exec_recursive().

	* array.c (rb_ary_inspect, rb_ary_hash): ditto.

	* file.c (rb_file_join): ditto.

	* hash.c (rb_hash_inspect, rb_hash_to_s, rb_hash_hash): ditto.

	* io.c (rb_io_puts): ditto.

	* object.c (rb_obj_inspect): ditto

	* struct.c (rb_struct_inspect): ditto.

Fri Mar  4 10:15:30 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/set.rb (SortedSet::setup): a hack to shut up warning.
	  [ruby-talk:132866]

Fri Mar  4 09:37:12 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (install-nodoc, pre-install-doc, post-install-doc):
	  fix some omissions.

Fri Mar  4 08:09:12 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/time.rb (Time::strptime): add new function.  inspired by
	  [ruby-talk:132815].

	* lib/parsedate.rb (ParseDate::strptime): ditto.

Thu Mar  4 07:07:00 2005  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: follow nkf 1.63

Thu Mar  3 23:24:00 2005  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: follow nkf 1.62

Thu Mar  3 18:47:18 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
